hphp/test/zend/good/ext/spl/tests/DirectoryIterator_getExtension_basic.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip.. only for Unix');
}
}
