hphp/test/zend/bad/ext/standard/tests/file/basename_variation2-win32.php.skipif
<?php
if (substr(PHP_OS, 0, 3) != 'WIN') {
    die('skip Windows only basename tests');
}
?>